<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">


    <EditText
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/addPDepName" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" android:hint="@string/name"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText6" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/addPDepName" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/relation"
            app:layout_constraintHorizontal_bias="0.454"/>
    <EditText
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText7" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText6" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.0"
            android:hint="@string/area" app:layout_constraintHorizontal_bias="0.466"/>
    <EditText
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText8" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText7" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.0"
            android:hint="@string/phoneNo" app:layout_constraintHorizontal_bias="0.533"/>
</androidx.constraintlayout.widget.ConstraintLayout>